feat: Add security, customer isolation, pricing, billing enhancements, and Bruno collection
- Implement API key authentication for REST API endpoints
- Add customer isolation and access control
- Add database models for customers, API keys, and pricing
- Implement customer-specific pricing service
- Add billing breakdown by service type
- Change billing period format to YYYY-MM
- Add custom domain exceptions
- Add scheduled billing calculation
- Add comprehensive test coverage
- Add Bruno API collection with environment setup
- Update documentation