@@ -1,16 +1,20 @@
 package com.microservice.billing.controller;
 
+import com.microservice.billing.exception.CustomerAccessDeniedException;
+import com.microservice.billing.exception.DomainValidationException;
+import com.microservice.billing.exception.FeatureDisabledException;
 import jakarta.validation.ConstraintViolationException;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.context.request.WebRequest;
 
 import java.time.LocalDateTime;
-import java.util.stream.Collectors;
+import java.time.format.DateTimeParseException;
 
 @Slf4j
 @RestControllerAdvice
@@ -28,7 +32,7 @@ public class GlobalExceptionHandler {
                         .message(error.getDefaultMessage())
                         .rejectedValue(error.getRejectedValue())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         var errorResponse = ErrorResponse.builder()
                 .timestamp(LocalDateTime.now())
@@ -54,7 +58,7 @@ public class GlobalExceptionHandler {
                         .message(violation.getMessage())
                         .rejectedValue(violation.getInvalidValue())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         var errorResponse = ErrorResponse.builder()
                 .timestamp(LocalDateTime.now())
@@ -68,21 +72,97 @@ public class GlobalExceptionHandler {
         return ResponseEntity.badRequest().body(errorResponse);
     }
 
-    @ExceptionHandler(IllegalStateException.class)
-    public ResponseEntity<ErrorResponse> handleIllegalState(
-            IllegalStateException ex, WebRequest request) {
+    @ExceptionHandler(HttpMessageNotReadableException.class)
+    public ResponseEntity<ErrorResponse> handleMalformedRequest(
+            HttpMessageNotReadableException ex, WebRequest request) {
         
-        log.warn("Illegal state: {}", ex.getMessage());
+        log.warn("Malformed request: {}", ex.getMessage());
+        
+        var errorResponse = ErrorResponse.builder()
+                .timestamp(LocalDateTime.now())
+                .status(HttpStatus.BAD_REQUEST.value())
+                .error("Bad Request")
+                .message("Malformed request body. Please check your JSON format.")
+                .path(request.getDescription(false).replace("uri=", ""))
+                .build();
+
+        return ResponseEntity.badRequest().body(errorResponse);
+    }
+
+    @ExceptionHandler(DateTimeParseException.class)
+    public ResponseEntity<ErrorResponse> handleDateTimeParseException(
+            DateTimeParseException ex, WebRequest request) {
+        
+        log.warn("Invalid date/time format: {}", ex.getMessage());
+        
+        String message = "Invalid date format. ";
+        if (ex.getParsedString() != null) {
+            message += "Received: '" + ex.getParsedString() + "'. ";
+        }
+        message += "Expected format: YYYY-MM (e.g., 2024-01)";
+        
+        var errorResponse = ErrorResponse.builder()
+                .timestamp(LocalDateTime.now())
+                .status(HttpStatus.BAD_REQUEST.value())
+                .error("Bad Request")
+                .message(message)
+                .path(request.getDescription(false).replace("uri=", ""))
+                .build();
+
+        return ResponseEntity.badRequest().body(errorResponse);
+    }
+
+    @ExceptionHandler(CustomerAccessDeniedException.class)
+    public ResponseEntity<ErrorResponse> handleCustomerAccessDenied(
+            CustomerAccessDeniedException ex, WebRequest request) {
+        
+        log.warn("Customer access denied: authenticated='{}', requested='{}'", 
+                ex.getAuthenticatedCustomerId(), ex.getRequestedCustomerId());
+        
+        var errorResponse = ErrorResponse.builder()
+                .timestamp(LocalDateTime.now())
+                .status(HttpStatus.FORBIDDEN.value())
+                .error("Forbidden")
+                .message(ex.getMessage())
+                .path(request.getDescription(false).replace("uri=", ""))
+                .build();
+
+        return ResponseEntity.status(HttpStatus.FORBIDDEN).body(errorResponse);
+    }
+
+    @ExceptionHandler(FeatureDisabledException.class)
+    public ResponseEntity<ErrorResponse> handleFeatureDisabled(
+            FeatureDisabledException ex, WebRequest request) {
+        
+        log.warn("Feature disabled: {}", ex.getFeatureName());
         
         var errorResponse = ErrorResponse.builder()
                 .timestamp(LocalDateTime.now())
                 .status(HttpStatus.CONFLICT.value())
-                .error("Illegal State")
+                .error("Feature Disabled")
                 .message(ex.getMessage())
                 .path(request.getDescription(false).replace("uri=", ""))
                 .build();
 
         return ResponseEntity.status(HttpStatus.CONFLICT).body(errorResponse);
+    }
+
+    @ExceptionHandler(DomainValidationException.class)
+    public ResponseEntity<ErrorResponse> handleDomainValidation(
+            DomainValidationException ex, WebRequest request) {
+        
+        log.warn("Domain validation error: field='{}', value='{}', message='{}'", 
+                ex.getFieldName(), ex.getInvalidValue(), ex.getMessage());
+        
+        var errorResponse = ErrorResponse.builder()
+                .timestamp(LocalDateTime.now())
+                .status(HttpStatus.BAD_REQUEST.value())
+                .error("Validation Failed")
+                .message(ex.getMessage())
+                .path(request.getDescription(false).replace("uri=", ""))
+                .build();
+
+        return ResponseEntity.badRequest().body(errorResponse);
     }
 
     @ExceptionHandler(Exception.class)
